# scene_segment_ros

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: cfg_fastSAM.yaml  cfg_maskDino.yaml  cfg_pFCN.yaml  cfg_segFormer.yaml  cfg_yoso.yaml  params.yaml  rviz.rviz
include/: PanopticFCN-R50-512-3x-FAST.yaml  coco_panoptic_labels.md
launch/: segmenter.launch  segmenter_fastSAM.launch  segmenter_maskDino.launch  segmenter_pFCN.launch  segmenter_segFormer.launch  segmenter_yoso.launch
msg/: Mask.msg  SegResult.msg  SegmenterDataMsg.msg  VSGraphDataMsg.msg
src/: modelRunner.py  output.py  pcd_listener.cpp  requirements.txt  segmenter.py  segmenter_fastSAM.py  segmenter_maskDino.py  segmenter_pFCN.py  segmenter_segFormer.py  segmenter_yoso.py
src/fastsam/: __init__.py  decoder.py  model.py  predict.py  prompt.py  utils.py
src/maskdino/config/: maskdino_R50_bs16_50ep_3s_dowsample1_2048.yaml
src/maskdino/modeling/: criterion.py  matcher.py
src/panopticfcn/: backbone_utils.py  build_solver.py  config.py  gt_generate.py  head.py  loss.py  panoptic_seg.py  utils.py
src/panopticfcn/config/: PanopticFCN-R50-600-3x-FAST.yaml  PanopticFCN-R50-600-3x.yaml  PanopticFCN-Star-R50-3x-FAST.yaml
src/utils/: cudaChecker.cu  helpers.py  semantic_utils.py
src/yoso/: utils.py
src/yoso/config/coco/: YOSO-R50.yaml
src/yoso/yoso/: segmentator.py
