<?xml version="1.0"?>
<package format="2">
  <name>segmenter_ros</name>
  <version>0.1.0</version>
  <description>The Scene Segmentation package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <maintainer email="ali.tourani@uni.lu">Ali Tourani</maintainer>
  <maintainer email="hriday.bavle@uni.lu">Hriday Bavle</maintainer>  
  <maintainer email="ejazsaad0332@gmail.com">Saad Ejaz</maintainer>
  <maintainer email="maych727@gmail.com">Maxime Capdouze</maintainer>
  <maintainer email="maych727@gmail.com">Christophe Mayers</maintainer>  

  <!-- One license tag required, multiple allowed, one license per tag -->
  <license>GPLv3</license>

  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <url type="website">https://github.com/snt-arg/scene_segment_ros</url>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>

  <export>
  </export>
</package>